k8s-configs/config-management-server.yml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: config-management-server
#   labels:
#     app: config-management-server
# spec:
#   containers:
#   - name: cms-container
#     image: local/config-management-server
#     imagePullPolicy: Never
#     command: ['server', 'mysql']
#     ports:
#     - name: cms-grpc
#       containerPort: 3000
# ---
apiVersion: v1
kind: Service
metadata:
  name: config-management-server
spec:
  type: NodePort
  selector:
    app: config-management-server
  ports:
  - port: 3000
    targetPort: cms-grpc
    name: client-port
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config-management-server
spec:
  replicas: 5
  selector:
    matchLabels:
      app: config-management-server
  template:
    metadata:
      labels:
        app: config-management-server
    spec:
      containers:
      - name: cms-container
        image: local/config-management-server
        imagePullPolicy: Never
        command: ['server', 'mysql']
        ports:
        - name: cms-grpc
          containerPort: 3000
