k8s-configs/configuration-update-client.yml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: configuration-update-client
#   labels:
#     app: configuration-update-client
# spec:
#   containers:
#   - name: cuc-container
#     image: local/config-management-userclient
#     imagePullPolicy: Never
#     command: ['userclient', 'config-management-server:3000']
#     ports:
#     - name: cuc-api-port
#       containerPort: 8001
# ---
apiVersion: v1
kind: Service
metadata:
  name: configuration-update-client
spec:
  type: NodePort
  selector:
    app: configuration-update-client
  ports:
  - port: 8001
    targetPort: cuc-api-port
    protocol: TCP
    name: cuc-api-port
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configuration-update-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: configuration-update-client
  template:
    metadata:
      labels:
        app: configuration-update-client
    spec:
      containers:
      - name: cuc-container
        image: local/config-management-userclient
        imagePullPolicy: Never
        command: ['userclient', 'config-management-server:3000']
        ports:
        - name: cuc-api-port
          containerPort: 8001
