k8s-configs/getconfigbash.yml
apiVersion: v1
kind: Service
metadata:
  name: getconfigbash
spec:
  type: NodePort
  selector:
    app: getconfigbash
  ports:
  - port: 8080
    targetPort: web-list-port
    protocol: TCP
    name: web-list-port
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: getconfigbash
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getconfigbash
  template:
    metadata:
      labels:
        app: getconfigbash
    spec:
      containers:
      - name: cmc-container
        image: local/config-management-client
        imagePullPolicy: Never
        command: ['client', 'config-management-server:3000', 'getconfigbash']
        ports:
        - name: cmc-api-port
          containerPort: 8000
      - name: getconfigbash
        image: local/config-management-mid-tier
        imagePullPolicy: Never
        command: ['./mid-tier-app.sh']
        ports:
        - name: web-list-port
          containerPort: 8080
